@@ -16,4 +16,4 @@ error.AccessControlProfile.delete = You cannot delete a profile that has parent 
 error.AccessControlProfile.delete.protected = You cannot delete a protected profile 
 error.AccessControlProfile.addProfileToItself = Unable to add profile {0} to itself
 error.AccessControlProfile.treeCycle = Unable to add profile {1} to {0} because {0} is already a parent of {1}
-
+error.AccessControlProfile.customExpressionValidator.required = You cannot create a profile with custom expression without giving an custom expression validator or wrong custom expression
